@@ -42,6 +42,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|Locale
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Random
 import|;
 end_import
@@ -260,7 +269,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|"4.0.0.1"
+literal|"4.0.0"
 argument_list|,
 name|Version
 operator|.
@@ -272,11 +281,23 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|"4.0.0.2"
+literal|"4.0.0.1"
 argument_list|,
 name|Version
 operator|.
 name|LUCENE_4_0_0_BETA
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"4.0.0.2"
+argument_list|,
+name|Version
+operator|.
+name|LUCENE_4_0_0
 operator|.
 name|toString
 argument_list|()
@@ -293,7 +314,119 @@ name|assertEquals
 argument_list|(
 name|Version
 operator|.
-name|LUCENE_4_0_0
+name|LUCENE_4_9_0
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+literal|"LUCENE_49"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_4_9_0
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+literal|"LUCENE_4_9"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_4_9_0
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+literal|"LUCENE_4_9_0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_4_9_0
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+literal|"lucene_49"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_4_9_0
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+literal|"Lucene_4_9"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_4_9_0
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+literal|"Lucene_4_9_0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_4_10_0
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+literal|"LUCENE_4_10"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_4_10_0
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+literal|"LUCENE_4_10_0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_4_0_0_ALPHA
 argument_list|,
 name|Version
 operator|.
@@ -307,7 +440,7 @@ name|assertEquals
 argument_list|(
 name|Version
 operator|.
-name|LUCENE_4_0_0
+name|LUCENE_4_0_0_ALPHA
 argument_list|,
 name|Version
 operator|.
@@ -321,7 +454,7 @@ name|assertEquals
 argument_list|(
 name|Version
 operator|.
-name|LUCENE_4_0_0
+name|LUCENE_4_0_0_ALPHA
 argument_list|,
 name|Version
 operator|.
@@ -335,13 +468,27 @@ name|assertEquals
 argument_list|(
 name|Version
 operator|.
-name|LUCENE_4_0_0
+name|LUCENE_4_0_0_ALPHA
 argument_list|,
 name|Version
 operator|.
 name|parseLeniently
 argument_list|(
 literal|"LUCENE_4_0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_4_0_0
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+literal|"LUCENE_4_0_0"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -369,7 +516,35 @@ name|Version
 operator|.
 name|parseLeniently
 argument_list|(
+literal|"latest"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Version
+operator|.
+name|LATEST
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
 literal|"LUCENE_CURRENT"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Version
+operator|.
+name|LATEST
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+literal|"lucene_current"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -401,6 +576,175 @@ parameter_list|)
 block|{
 comment|// pass
 block|}
+try|try
+block|{
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+literal|"LUCENE_410"
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|iae
+parameter_list|)
+block|{
+comment|// pass
+block|}
+try|try
+block|{
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+literal|"LUCENE41"
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|iae
+parameter_list|)
+block|{
+comment|// pass
+block|}
+block|}
+DECL|method|testParseLenientlyOnAllConstants
+specifier|public
+name|void
+name|testParseLenientlyOnAllConstants
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|boolean
+name|atLeastOne
+init|=
+literal|false
+decl_stmt|;
+for|for
+control|(
+name|Field
+name|field
+range|:
+name|Version
+operator|.
+name|class
+operator|.
+name|getDeclaredFields
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|Modifier
+operator|.
+name|isStatic
+argument_list|(
+name|field
+operator|.
+name|getModifiers
+argument_list|()
+argument_list|)
+operator|&&
+name|field
+operator|.
+name|getType
+argument_list|()
+operator|==
+name|Version
+operator|.
+name|class
+condition|)
+block|{
+name|atLeastOne
+operator|=
+literal|true
+expr_stmt|;
+name|Version
+name|v
+init|=
+operator|(
+name|Version
+operator|)
+name|field
+operator|.
+name|get
+argument_list|(
+name|Version
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|v
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+name|v
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|v
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+name|field
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|v
+argument_list|,
+name|Version
+operator|.
+name|parseLeniently
+argument_list|(
+name|field
+operator|.
+name|getName
+argument_list|()
+operator|.
+name|toLowerCase
+argument_list|(
+name|Locale
+operator|.
+name|ROOT
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|assertTrue
+argument_list|(
+name|atLeastOne
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|testParse
 specifier|public
@@ -444,7 +788,7 @@ name|LUCENE_4_1_0
 argument_list|,
 name|Version
 operator|.
-name|parseLeniently
+name|parse
 argument_list|(
 literal|"4.1.0"
 argument_list|)
@@ -458,9 +802,9 @@ name|LUCENE_4_0_0_ALPHA
 argument_list|,
 name|Version
 operator|.
-name|parseLeniently
+name|parse
 argument_list|(
-literal|"4.0.0.1"
+literal|"4.0.0"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -472,7 +816,21 @@ name|LUCENE_4_0_0_BETA
 argument_list|,
 name|Version
 operator|.
-name|parseLeniently
+name|parse
+argument_list|(
+literal|"4.0.0.1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_4_0_0
+argument_list|,
+name|Version
+operator|.
+name|parse
 argument_list|(
 literal|"4.0.0.2"
 argument_list|)
@@ -805,6 +1163,11 @@ throws|throws
 name|Exception
 block|{
 comment|// all but the latest version should be deprecated
+name|boolean
+name|atLeastOne
+init|=
+literal|false
+decl_stmt|;
 for|for
 control|(
 name|Field
@@ -840,6 +1203,10 @@ operator|.
 name|class
 condition|)
 block|{
+name|atLeastOne
+operator|=
+literal|true
+expr_stmt|;
 name|Version
 name|v
 init|=
@@ -922,6 +1289,11 @@ expr_stmt|;
 block|}
 block|}
 block|}
+name|assertTrue
+argument_list|(
+name|atLeastOne
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|testLatestVersionCommonBuild
 specifier|public
